# Jupyter-Book-PHY210

./: .gitignore  How to run these notebooks.md  PHY210_SymPy_Row_Reduction.ipynb  PHY210_Sympy_Linear_Algebra.ipynb  PHY210_Sympy_ODE_Laplace.ipynb  PHY210_Sympy_ODE_basics.ipynb  README.md  binderreqquirements.txt  myst.yml  pyproject.toml  requirements.txt  uv-and-marimo-installation.md
.binder/: requirements.txt
_build/site/: config.json  myst.search.json  myst.xref.json  objects.inv
_build/site/content/: how-to-run-these-notebooks.json  index.json  phy210-sympy-basics.json  phy210-sympy-linear-algebra.json  phy210-sympy-ode-basics.json  phy210-sympy-ode-laplace.json  phy210-sympy-row-reduction.json  readme.json  uv-and-marimo-installation.json
_build/site/public/: How to run these not-7299cec2635e1495ab99d24c96d9d11e.md  How to run these not-8c5a9b6916eb3512b12678cf2679a6ef.md  How to run these not-c1f1ee0bf48709b9d05d32ec59ac6f5d.md  PHY210_Sympy_Basics-6671fc16c434df1cb4c16db40681645e.ipynb  Python-for-210-35cc28bbc7a7635cf732106f5d872afb.md  Python-for-210-3d2ed95efd4f01ca17305e735e3762bb.md  Python-for-210-52b5103db011b8dee736f3e5a9b3f510.md  README-684d3635e7372115f4f1a73d124763c1.md  README-b1c3ed930fab5f853024c1013fbe392c.md  uv-and-marimo-instal-4b4955822088ca62b26b9a1233cf4e75.md  uv-and-marimo-instal-c674a340eb41a23ea6612dd10820177b.md  uv-and-marimo-instal-dc5946f6cf126202be0d3d09d666db76.md
