[project]
name = "phy210book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyter-book>=2.1.0",
    "jupyter-core>=5.9.1",
    "matplotlib>=3.10.8",
    "notebook>=7.5.1",
    "numpy>=2.4.0",
    "sympy>=1.14.0",
]
